# nwc2abc

./: .gitignore  AI.md  EXAMPLE.md  LICENSE  README.md  combined_report.html  musicxml_summary_none.md  pyproject.toml  requirements.txt  test.mid  vocal_report.html
ai/: README.md  bar_planner.py  detail_generator.py  eval.py  eval_analysis_tool.py  relative_transformer.py  remi_detokenizer.py  remi_tokenizer.py  run_generate.py  train.py  train_light.py  train_two_stage.py
ai/docs/: KEY_CHANGE.md  LIMITATION.md  MULTI-STAGE.md  REVIEW.md
analyzer/: AI.md  setup.cfg
analyzer/jar/: nwc2xml.ps1  nwc2xml.sh
analyzer/midi2abc/: base-chord.txt.txt  midi2abc.py
analyzer/musicxml/: run_analysis.py
analyzer/nwc2abc/: __init__.py
analyzer/tests/: test_nwc2abc.py
batch/: MIDI.md  README.md  convert-all.ps1  convert-all.py  fix-korean.py  musicxml-organize.py  musicxml2abc.py  nwc2abc-cli.bat  nwc2nwctxt.py  nwctxt_fix.py  nwctxt_rename.py
batch/ps1/: convert-all.ps1  nwctxt2musicxml.ps1
batch/samples/: 가라세상끝까지(온천하에다니며).nwc
convert/: convert-all.py  musicxml2abc.py  musicxml_organize.py  nwc2nwctxt.py  nwctxt2musicxml.py  nwctxt_fix.py
docs/: ai_summary_none.md  convert_summary_none.md
examples/: 1.75.nwc  1.75.xml  example_score.nwc.txt  single.nwc  single.xml  test-melody.nwc  test.nwc  test.xml
midi2abc/: test.abc.txt
musicxml/: analyze_combined_score.py  analyze_instrumental_score.py  analyze_style_score.py  analyze_vocal_score.py  musicxml_summary_none.md  run_analysis.py
nwc2abc/: cli.py  converter.py
utils/: onefiler.py
(+37 files in other folders)
