[metadata]
name = nwc2abc
version = 1.0.0
description = Convert Noteworthy Composer (NWCtxt) to ABC notation
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    music21>=8.1
    requests>=2.31